# SIRIUS

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.rst  Jenkinsfile  LICENSE  README.md  apply_format.x  bors.toml  check_format.py  check_format.x  clang_format.x  configure.py  generate_options_header_file.sh  inner  make.inc  make.inc-back  make.inc.example  make_version_hpp.py  platform.gcc.cray.json  platform.gpu.json  platform.intel.json  prerequisite.py
apps/atoms/: CMakeLists.txt  Makefile  README  README.md  aiida_atoms_from_structure.py  atom  atom.cpp  atom2.cpp  atomic_conf.hpp.in  atoms.cpp  atoms.in  atoms.json  atoms.py  atoms1.cpp  atoms1.py  fpatom.cpp  run.x
apps/dft_loop/: CMakeLists.txt  Fe.json  Makefile  Ni.json  O.json  dft_loop.cpp  filesystem.hpp  plot.cpp  plot.py  sirius.json  sirius.scf.cpp  timers.json
apps/mini_app/: CMakeLists.txt  plot.cpp  sirius.scf.cpp
apps/nlcg/: CMakeLists.txt  sirius.nlcg.cpp  sirius.test.nlcg.cpp
apps/tests/: CMakeLists.txt  Makefile  Si.json  allgather.cpp  cuda_zgemm.cpp  fft.cpp  fft1k.cpp  fft_t.cpp  grad.cpp  hdf5.cpp  hydrogen  hydrogen.cpp  hydrogen_plot.py  link_lapack.cpp  mt_function  mt_function.cpp  mt_kinetic  mt_kinetic.cpp  read_atom  read_atom.cpp  splindex  splindex.cpp  spline.cpp  spline_gpu.cpp  test.hpp  test_allgather  test_allgather.cpp  test_alloc.cpp  test_allreduce.cpp  test_allreduce_v2.cpp  test_allreduce_v3.cpp  test_alltoall.cpp  test_anderson.cpp  test_atomic_orbital_index.cpp  test_bcast.cpp  test_bcast_v2.cpp  test_bessel.cpp  test_blacs.cpp  test_comm_split.cpp  test_complex_exp.cpp  (+129 more)
apps/unit_tests/: CMakeLists.txt  Makefile  test_any_ptr.cpp  test_cmd_args.cpp  test_dmatrix.cpp.backup  test_fft_correctness  test_fft_correctness.cpp  test_fft_correctness_1.cpp  test_fft_correctness_2.cpp  test_fft_correctness_3.cpp  test_fft_correctness_v2.cpp  test_fft_correctness_v2.cpp.backup  test_fft_correctness_v3.cpp  test_fft_correctness_v3.cpp.backup  test_fft_real  test_fft_real.cpp  test_fft_real_1.cpp  test_fft_real_2.cpp  test_fft_real_3.cpp  test_fft_real_v2.cpp  test_fft_real_v2.cpp.backup  test_gaunt_coeff_1.cpp  test_gaunt_coeff_2.cpp  test_geom3d.cpp  test_gvec.cpp  test_init  test_init.cpp  test_init_ctx.cpp  test_linalg  test_linalg.cpp  test_mempool.cpp  test_nan.cpp  test_rlm.cpp  test_rlm_deriv.cpp  test_rot_ylm  test_rot_ylm.cpp  test_roundoff.cpp  test_serialize.cpp  test_sht  test_sht.cpp  (+17 more)
apps/upf/: CMakeLists.txt  plot_uspp.py  upf1_to_json.py  upf2_to_json.py  upf_to_json  upf_to_json.py
doc/: CMakeLists.txt  Makefile  doxygen.cfg  doxygen.cfg.in
doc/html/: _atom_2init_8hpp_source.html  _d_f_t.html  _forces___p_s_8cpp_source.html  _forces___p_s_8h_source.html  _lebedev_laikov_8cpp_source.html  _lebedev_laikov_8h_source.html  _potential_2init_8hpp_source.html  add__k__point__contribution__dm_8hpp_source.html  add__k__point__contribution__rg_8hpp_source.html  add__nl__h__o__rs_8cpp_source.html  add__pw__ekin_8cu_source.html  annotated.html  apply_8hpp_source.html  atom_8h.html  atom_8h__dep__incl.dot  atom_8h__dep__incl.md5  atom_8h__incl.dot  atom_8h__incl.md5  atom_8h_source.html  atom__symmetry__class_8h.html  atom__symmetry__class_8h__dep__incl.dot  atom__symmetry__class_8h__dep__incl.md5  atom__symmetry__class_8h__incl.dot  atom__symmetry__class_8h__incl.md5  atom__symmetry__class_8h_source.html  atom__type_8h.html  atom__type_8h__dep__incl.dot  atom__type_8h__dep__incl.md5  atom__type_8h__incl.dot  atom__type_8h__incl.md5  atom__type_8h_source.html  atomic__conf_8h.html  atomic__conf_8h__dep__incl.dot  atomic__conf_8h__dep__incl.md5  atomic__conf_8h_source.html  atomic__symb_8h.html  atomic__symb_8h_source.html  augmentation__operator_8h.html  augmentation__operator_8h__dep__incl.dot  augmentation__operator_8h__dep__incl.md5  (+2001 more)
doc/latex/: _d_f_t.tex  annotated.tex  atom_8h.tex  atom_8h__dep__incl.dot  atom_8h__dep__incl.md5  atom_8h__incl.dot  atom_8h__incl.md5  atom__symmetry__class_8h.tex  atom__symmetry__class_8h__dep__incl.dot  atom__symmetry__class_8h__dep__incl.md5  atom__symmetry__class_8h__incl.dot  atom__symmetry__class_8h__incl.md5  atom__type_8h.tex  atom__type_8h__dep__incl.dot  atom__type_8h__dep__incl.md5  atom__type_8h__incl.dot  atom__type_8h__incl.md5  atomic__conf_8h.tex  atomic__conf_8h__dep__incl.dot  atomic__conf_8h__dep__incl.md5  atomic__symb_8h.tex  augmentation__operator_8h.tex  augmentation__operator_8h__dep__incl.dot  augmentation__operator_8h__dep__incl.md5  augmentation__operator_8h__incl.dot  augmentation__operator_8h__incl.md5  band_8h.tex  band_8h__dep__incl.dot  band_8h__dep__incl.md5  band_8h__incl.dot  band_8h__incl.md5  basis.tex  beta__projectors_8h.tex  beta__projectors_8h__dep__incl.dot  beta__projectors_8h__dep__incl.md5  beta__projectors_8h__incl.dot  beta__projectors_8h__incl.md5  blacs__grid_8hpp.tex  blacs__grid_8hpp__dep__incl.dot  (+862 more)
python_module/: .flake8  CMakeLists.txt  Makefile  README  Untitled.ipynb  context_test.py  context_test2.py  energy.hpp  magnetization.hpp  make_sirius_comm.hpp  py_sirius.cpp  py_sirius_atom.cpp  py_sirius_operators.cpp  py_sirius_paw.cpp  py_sirius_r3.cpp  py_sirius_symmetry.cpp  py_sirius_util.cpp  py_sirius_util.hpp  python_module_includes.hpp  requirements.txt  set_atom_positions.hpp  setup.cfg  setup.py  timers.json  unit_cell_accessors.hpp  unit_cell_setters.hpp  vectortest.py
src/: AUTHORS  CMakeLists.txt  Hamiltonian.h  LebedevLaikov.cpp  Makefile  README.md  _header_file_template.hpp  _sirius_api_old.cpp_  atom.cpp  atom.h  atom.hpp  atom_symmetry_class.cpp  atom_symmetry_class.h  atom_symmetry_class.hpp  atom_type.cpp  atom_type.h  atom_type.hpp  atomic_conf.h  atomic_data.hpp  atomic_symb.h  augmentation_operator.h  band.cpp  band.h  band.hpp  band_fd.hpp  band_pseudo_pot.cpp  band_pseudo_pot_itsol.cpp  band_uspp.cpp  band_uspp_gpu_parallel.cpp  beta_projectors.cpp  beta_projectors.h  blacs_grid.h  blas.h  blas_lapack.h  cmd_args.h  cmd_args.hpp  communicator.cpp  communicator.h  config.h  constants.h  (+199 more)
(+1893 files in other folders)
